Fix for earlier versions

--- a/pom.xml
+++ b/pom.xml
@@ -141,8 +141,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.6.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>1.7</source>
+                    <target>1.7</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -155,7 +155,7 @@
     </build>
 
     <properties>
-        <bitbucket.version>5.0.1</bitbucket.version>
+        <bitbucket.version>4.0.0-m27</bitbucket.version>
         <bitbucket.data.version>${bitbucket.version}</bitbucket.data.version>
         <amps.version>6.3.6</amps.version>
         <atlassian.plugin.key>${project.groupId}.${project.artifactId}</atlassian.plugin.key>
